# rosalind

./: .travis.yml  Cargo.toml  README.mkd  benchman.sh  mktags.sh  tags  watchman.sh
src/: dna.rs  lib.rs  nucleotide.rs
src/dna/: error.rs  iterator.rs  mod.rs  result.rs
src/problems/: dna.rs  rna.rs
src/strand/: error.rs  iterator.rs  mod.rs  mode.rs  result.rs
tests/: dna_test.rs  strand_test.rs
tests/scaffolds/: rosalind_dna-1.txt  rosalind_dna-2.txt  rosalind_dna_example  rosalind_rna-1.txt
